<resources>
    <string name="app_name">Cannect</string>
    <string name="rpm">RPM</string>
    <string name="temp">Temperature</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="dashboard">Dashboard</string>
    <string name="diag">Diagnostics</string>
    <string name="connect">Connect</string>
    <string name="status">Connected</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_connect">Connect</string>
    <string name="title_activity_dashboard2">Dashboard2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--    for spinner-->
    <string-array name="PIDs">
        <item>Choose...</item>
        <item>VEHICLE SPEED</item>
        <item>FUEL PRESSURE</item>
        <item>ENGINE RPM</item>
        <item>ENGINE COOLANT TEMP</item>
        <item>MAF SENSOR</item>
        <!--        <item>INTAKE AIR TEMPERATURE</item>-->
        <!--        <item>ENGINE OIL TEMPERATURE</item>-->
        <!--        <item>THROTTLE POSITION</item>-->
        <item>DEMAND ENGINE TORQUE</item>
        <item>ACTUAL ENGINE TORQUE</item>
        <item>CALCULATED ENGINE LOAD</item>
        <!--        <item>ABSOLUTE ENGINE LOAD</item>-->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>