<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background= "?attr/backgroundcolor"
    tools:context=".MainActivity">

    <!--top bar -->
    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/buttoncolor">

        <TextView
            android:id="@+id/status_text"
            android:text="@string/status"
            android:textSize="34sp"
            android:textColor="?attr/textcolor"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
<!--        <TextView-->
<!--            android:id="@+id/protocol_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--&lt;!&ndash;            android:text="Connect to find Protocol"&ndash;&gt;-->
<!--            android:textColor="?attr/textcolor"-->
<!--            android:textSize="20sp" />-->
<!--    </RelativeLayout>-->

    <!-- menu list-->
    <GridLayout
        android:columnCount="2"
        android:rowCount="3"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"

        android:layout_height="250sp"
        android:padding="14dp">

        <!--row 1
        column 1
        settings card
        -->
        <androidx.cardview.widget.CardView
            android:id="@+id/settings_card"
            app:cardBackgroundColor="?attr/buttoncolor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:src="@drawable/ic_settings"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></ImageView>
                <TextView
                    android:id="@+id/settings_text"
                    android:textAlignment="center"
                    android:text="@string/settings"
                    android:textSize="18sp"
                    android:textColor="?attr/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--column 2 diagnostics card-->
        <androidx.cardview.widget.CardView
            android:id="@+id/diagnostics_card"
            app:cardBackgroundColor="?attr/buttoncolor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:src="@drawable/ic_diag"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></ImageView>
                <TextView
                    android:id="@+id/diag_text"
                    android:textAlignment="center"
                    android:text="@string/diag"
                    android:textSize="18sp"
                    android:textColor="?attr/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <!--row 2
        column 1
        dashboard card
        -->
        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_card"
            app:cardBackgroundColor="?attr/buttoncolor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:src="@drawable/ic_dashboard"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></ImageView>
                <TextView
                    android:id="@+id/dashboard_text"
                    android:textAlignment="center"
                    android:text="@string/dashboard"
                    android:textSize="18sp"
                    android:textColor="?attr/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--column 2
        amp card
        -->
        <androidx.cardview.widget.CardView
            android:id="@+id/map_card"
            app:cardBackgroundColor="?attr/buttoncolor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:src="@drawable/ic_map"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    ></ImageView>
                <TextView
                    android:id="@+id/map_text"
                    android:textAlignment="center"
                    android:text="@string/map"
                    android:textSize="18sp"
                    android:textColor="?attr/textcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>


    <!--bottom bar -->
    <RelativeLayout
        android:id="@+id/connect_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/barcolor"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            style="?android:attr/buttonBarButtonStyle"
            android:clickable="false"
            android:layout_toLeftOf="@+id/connection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_bluetooth"></ImageView>

        <TextView
            android:id="@+id/connection_text"
            android:text="@string/connect"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

    </RelativeLayout>

</LinearLayout>